--- a/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
+++ b/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 sidebar" [class.closed]="isSidebarClosed">
+<!-- <div class="d-flex flex-column flex-shrink-0 p-3 sidebar" [class.closed]="isSidebarClosed">
     <button class="toggle-btn" (click)="toggleSidebar()">
       <i class="bi bi-list icon"></i>
       <span *ngIf="!isSidebarClosed">Toggle Sidebar</span>
@@ -37,4 +37,57 @@
         </a>
       </li>
     </ul>
+  </div>  
+
+  -->
+
+
+
+
+
+  <div class="sidebar" [class.collapsed]="isSidebarClosed">
+    <div class="sidebar-toggle" (click)="toggleSidebar()">
+      <!-- <mat-icon>menu</mat-icon> -->
+      <i class="bi bi-menu-button icon"></i>
+
+    </div>
+    <div class="menu-items" >
+    <nav>
+      <a routerLink="/home" mat-button>
+        <!-- <mat-icon>home</mat-icon> -->
+        <i class="bi bi-house-door icon"></i>
+
+        <span>Home</span>
+      </a>
+      <a routerLink="/devices" mat-button>
+        <!-- <mat-icon>devices</mat-icon> -->
+        <i class="bi bi-phone-vibrate"></i>
+
+        <span>Devices</span>
+      </a>
+      <a routerLink="/users" mat-button>
+        <!-- <mat-icon>group</mat-icon> -->
+        <i class="bi bi-people icon"></i>
+
+        <span>Users</span>
+      </a>
+      <a routerLink="/reports" mat-button>
+        <!-- <mat-icon>bar_chart</mat-icon> -->
+        <i class="bi bi-file-earmark-text icon"></i>
+
+        <span>Reports</span>
+      </a>
+      <a routerLink="/notifications" mat-button>
+        <!-- <mat-icon>bar_chart</mat-icon> -->
+        <i class="bi bi-bell"></i>
+        <span>Notifications</span>
+      </a>
+      <a routerLink="/logout" mat-button>
+        <!-- <mat-icon>logout</mat-icon> -->
+        <i class="bi bi-box-arrow-left"></i>
+        <span>Logout</span>
+      </a>
+    </nav>
   </div>
+  </div>
+  
