--- a/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
+++ b/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
@@ -1,20 +1,11 @@
-      <div class="dashboard-layout">
+ <div class="dashboard-layout">
       <app-navbar></app-navbar>
-    
       <div class="main-container">
 
-        <app-sidebar></app-sidebar>
+        <app-sidebar class="app-sidebar"></app-sidebar>
     
         <div class="main-content">
-          <div class="title">
-            <h1>Your Rooms</h1>
-          </div>
-    
-          <div >
             <app-room></app-room>
-            <app-thermostat></app-thermostat>
           </div>
         </div>
       </div>
-    </div> 
-      
