--- a/frontend/smartHouseFront/src/components/dashboard/dashboard.component.scss
+++ b/frontend/smartHouseFront/src/components/dashboard/dashboard.component.scss
@@ -38,3 +38,36 @@
 
 
 
+.add-room-section {
+  display: flex;
+  justify-content: flex-end; /* Positionne le bouton à gauche */
+  margin-bottom: 20px; /* Espace entre le bouton et la liste des rooms */
+}
+
+.add-room-btn {
+  background-color: #34495e; /* Couleur Bootstrap */
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.add-room-btn:hover {
+  background-color: #394e63;
+}
+
+
+
+.btn-custom {
+  background-color: #394e63; 
+  color: white; /* Couleur du texte */
+  border: none;
+}
+
+.btn-custom2 {
+  background-color: #4d6782; /* Couleur au survol */
+  color: white; /* Couleur du texte */
+  border: none;
+}
