--- a/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
+++ b/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
@@ -2,8 +2,9 @@
     <header class="header">
       <div class="logo">SMARTHOUSE</div>
       <nav class="nav">
-        <button class="btn" href="/signup">Sign up</button>
-        <button class="btn primary">Sign in</button>
+        <a href="/signup" class="btn">Sign up</a>
+        <a href="/login" class="btn primary">Sign in</a>
+
       </nav>
     </header>
   
