--- a/frontend/smartHouseFront/src/components/sidebar/sidebar.component.scss
+++ b/frontend/smartHouseFront/src/components/sidebar/sidebar.component.scss
@@ -1,14 +1,15 @@
+
 .sidebar {
-  position: fixed; /* Sidebar reste toujours fixe */
+  position: fixed; 
   top: 0;
   left: 0;
   width: 250px;
-  height: 100vh; /* Toujours sur toute la hauteur */
+  height: 100vh; 
   background-color: #2c3e50;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Réserve de l'espace pour le toggle */
+  justify-content: space-between; 
   transition: width 0.3s;
 
   &.collapsed {
@@ -25,11 +26,11 @@
 }
 
 .menu-items {
-  flex: 1; /* Prend tout l'espace disponible */
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Centre les items verticalement */
-  align-items: center; /* Centre les items horizontalement */
+  justify-content: center; 
+  align-items: center; 
 }
 
 nav a {
@@ -39,7 +40,7 @@ nav a {
   width: 100%;
   color: white;
   text-decoration: none;
-  justify-content: center; /* Centre le contenu dans chaque lien */
+  justify-content: center; 
   transition: background-color 0.3s;
 }
 
@@ -58,3 +59,5 @@ mat-icon {
 .collapsed span {
   display: none;
 }
+
+
