add od services

--- a/frontend/smartHouseFront/src/components/navbar/navbar.component.html
+++ b/frontend/smartHouseFront/src/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
     <input type="text" placeholder="Search..." />
   </div>
   <div class="user-info">
-    <span>User Name</span>
+    <span>{{userInfo?.username}}</span>
     <img src="assets/profile.png" alt="Avatar" class="avatar" />
   </div>
 </nav>
