--- a/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
+++ b/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
@@ -6,12 +6,10 @@
     
         <div class="main-content">
           <div class="add-room-section">
-            <!-- <button class="btn btn-primary add-room-btn"><i class="bi bi-plus"></i>Add Room</button> -->
             <button type="button" class="add-room-btn" data-bs-toggle="modal" data-bs-target="#addRoomModal">
               <i class="bi bi-plus"></i>Add Room
             </button>
           </div>
-        
             <app-room></app-room>
           </div>
         </div>
@@ -30,17 +28,17 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form>
+        <form [formGroup]="roomForm">
           <!-- Room Name -->
           <div class="mb-3">
             <label for="roomName" class="form-label">Room Name</label>
-            <input type="text" id="roomName" class="form-control" placeholder="Enter room name">
+            <input type="text" id="roomName" class="form-control" formControlName="name" placeholder="Enter room name">
           </div>
           
           <!-- Room Type Dropdown -->
           <div class="mb-3">
             <label for="roomType" class="form-label">Room Type</label>
-            <select id="roomType" class="form-select">
+            <select id="roomType" class="form-select" formControlName="type">
               <option value="bedroom">Bedroom</option>
               <option value="kitchen">Kitchen</option>
               <option value="bathroom">Bathroom</option>
@@ -52,29 +50,18 @@
           <!-- Devices Checkboxes -->
           <div class="mb-3">
             <label class="form-label">Devices</label>
-            <div class="form-check">
-              <input type="checkbox" id="deviceLight" class="form-check-input">
-              <label for="deviceLight" class="form-check-label">Light</label>
-            </div>
-            <div class="form-check">
-              <input type="checkbox" id="deviceFan" class="form-check-input">
-              <label for="deviceFan" class="form-check-label">Fan</label>
-            </div>
-            <div class="form-check">
-              <input type="checkbox" id="deviceAC" class="form-check-input">
-              <label for="deviceAC" class="form-check-label">Air Conditioner</label>
-            </div>
-            <div class="form-check">
-              <input type="checkbox" id="deviceTV" class="form-check-input">
-              <label for="deviceTV" class="form-check-label">Television</label>
+            <div class="form-check" *ngFor="let device of devices">
+              <input type="checkbox" [id]="'device' + device.type" class="form-check-input" [formControlName]="device.type">
+              <label [for]="'device' + device.type" class="form-check-label">{{ device.label }}</label>
             </div>
           </div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-custom">Save Room</button>
+        <button type="button" class="btn btn-custom" (click)="saveRoom()">Save Room</button>
         <button type="button" class="btn btn-custom2" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
+
