--- a/frontend/smartHouseFront/src/components/signin/signin.component.html
+++ b/frontend/smartHouseFront/src/components/signin/signin.component.html
@@ -1,14 +1,15 @@
 <div class="signin-container">
     <div class="form-section">
       <h1>Welcome Back !</h1>
-      <form>
+      <!-- <form> -->
+      <form [formGroup]="signinForm" (ngSubmit)="onSignIn()">
         <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" placeholder="Enter your email" />
+          <label for="username">Username</label>
+          <input type="text" id="username" formControlName="username" placeholder="Enter your username" />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" placeholder="Enter your password" />
+          <input type="password" id="password" formControlName="password" placeholder="Enter your password" />
         </div>
         <button type="submit" class="signin-btn">Sign In</button>
       </form>
