--- a/frontend/smartHouseFront/src/components/signup/signup.component.html
+++ b/frontend/smartHouseFront/src/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="signup-container">
   <div class="form-section">
     <h1>Create Your Account</h1>
-    <form>
+    <!-- <form (ngSubmit)="onSignUp()"> 
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" placeholder="Enter your username" />
@@ -14,21 +14,46 @@
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Enter your password" />
       </div>
-      <!-- Ajout du champ Gender -->
         <label for="gender">Gender</label>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="Male">
         <label class="form-check-label" for="flexRadioDefault1">
           Male
         </label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="Female" >
         <label class="form-check-label" for="flexRadioDefault2">
         Female
         </label>
       </div>
       <button type="submit" class="signup-btn">Sign Up</button>
+    </form> -->
+    <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" formControlName="username" placeholder="Enter your username" />
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" formControlName="email" placeholder="Enter your email" />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" formControlName="password" placeholder="Enter your password" />
+      </div>
+      <div class="form-group">
+        <label>Gender</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" formControlName="gender" id="genderMale" value="Male">
+          <label class="form-check-label" for="genderMale">Male</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" formControlName="gender" id="genderFemale" value="Female">
+          <label class="form-check-label" for="genderFemale">Female</label>
+        </div>
+      </div>
+      <button type="submit" class="signup-btn" [disabled]="signupForm.invalid">Sign Up</button>
     </form>
     <p class="redirect">
       Already have an account? <a href="/login">Sign In</a>
